# qfin

./: .gitignore  README.md  pyproject.toml
examples/: api_001.ipynb  backtest_001.ipynb  backtest_002.ipynb  example_001.ipynb  example_002.ipynb  indicators_cross.ipynb  indicators_echo.ipynb
examples/data/: _^spx.csv
src/qfin/: __init__.py  your_code.py
src/qfin/api/: bybit.py  fred.py  tv.py  yahoo.py
src/qfin/backtester/: backtester.py  plot.py  runners.py  stats.py
src/qfin/indicators/: common.py
src/qkit/: __init__.py  backtester.py
src/qkit/backtester/: backtester.py
