[project]
name = "qkit"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "thdft", email = "thdft@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"
