[project]
name = "qfin"
version = "0.1.9"
description = "Tools for quantitative financial"
readme = "README.md"
authors = [{ name = "thdft", email = "thdft@users.noreply.github.com" }]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3",
    "numpy>=2",
    "pandas>=2",
    "plotly>=6",
    "websocket-client>=1.8.0",
    "yfinance>=0.2.65",
]

[project.urls]
Homepage = "https://github.com/thdft/qfin.git"
Repository = "https://github.com/thdft/qfin.git"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "nbformat>=5.10.4",
    "ruff>=0.12.9",
]

[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
unfixable = ["F401"] # Disable fix for unused imports (`F401`).
